Pb horizontal scrolling fixed

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,10 +8,6 @@ a {
   color: black;
 }
 
-.allBlocks {
-  margin: 0px;
-}
-
 .headerBlock {
   width: 100%;
   display: flex;
@@ -80,13 +76,16 @@ nav {
   color: black;
 }
 
+.container {
+  margin-left: 20px;
+}
+
 .introBlock {
   width: 100%;
-  margin: 20px;
 }
 
 .introOne {
-  width: 80%;
+  width: 90%;
   font-weight: 700;
   font-size: x-large;
 }
@@ -96,10 +95,8 @@ nav {
 }
 
 .searchBlock {
-  width: 100%;
   height: 55px;
   display: flex;
-  padding: 0px 10px 0px 20px;
   margin-top: 30px;
 }
 
@@ -146,7 +143,6 @@ button {
 }
 
 .filtersBlock {
-  width: 100%;
   padding-left: 20px;
   display: flex;
   flex-direction: row;
@@ -248,6 +244,7 @@ h2 {
 }
 
 .imageFittingCard {
+  display: flex;
   object-fit: cover;
   width: 130px;
   height: 150px;
@@ -699,8 +696,12 @@ footer {
     border-radius: 20px;
   }
 
+  .imageFittingCard {
+    display: flex;
+  }
+
   .popularCard {
-    margin-bottom: 30px;
+    margin-bottom: 110px;
   }
 
   #housingBlock {
@@ -775,6 +776,9 @@ footer {
     height: 200px;
   }
 
+  .frioulCard {
+    height: 185px;
+  }
   .frioulPic {
     height: 110px;
   }
@@ -799,8 +803,12 @@ footer {
     height: 130px;
   }
 
+  .longchampCard {
+    height: 230px;
+  }
+
   .longchampPic {
-    height: 180px;
+    height: 160px;
   }
 
   footer {
@@ -819,7 +827,7 @@ footer {
 /* Desktop */
 @media only screen and (min-width: 1200px) and (max-width: 1440px) {
   .headerBlock {
-    margin: 0px;
+    margin-top: 20px;
     display: flex;
     flex-wrap: nowrap;
   }
@@ -878,6 +886,10 @@ footer {
     font-size: x-large;
   }
 
+  .introTwo {
+    margin-top: -15px;
+  }
+
   .searchBlock {
     width: 35%;
   }
@@ -898,17 +910,28 @@ footer {
     display: none;
   }
 
+  h3 {
+    margin-right: 15px;
+  }
+
   .filtersBlock {
     align-items: baseline;
   }
 
   .filter {
-    margin-right: 20px;
+    margin: 10px 20px 0px 10px;
+    padding: 5px 15px 5px 0px;
+    border-radius: 30px;
   }
 
   .filtersList :hover {
     background-color: #deebff;
     color: #0065ff;
+  }
+
+  .filterIcon {
+    padding: 5px;
+    border-radius: 30px;
   }
 
   .infoLine {
@@ -925,6 +948,10 @@ footer {
     width: 30%;
     margin: 0px 20px 0px 20px;
     border-radius: 20px;
+  }
+
+  .imageFittingCard {
+    display: flex;
   }
 
   .popularCard {
